👨💻 chore: update VS Code extensions
- Add `ms-azuretools.vscode-docker` to recommended VS Code extensions.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "mccarter.start-git-bash",
     "timonwong.shellcheck",
-    "thfriedrich.lammps"
+    "thfriedrich.lammps",
+    "ms-azuretools.vscode-docker"
   ]
 }
