🐳: Update Dockerfile and Docker Compose with new configurations
- Update Dockerfile to set `project_home` as default working directory, improving consistency and ease of use for developers using this Docker image.
- Update Docker Compose configuration to comment out .ssh volume mapping.
- Update README.md to reflect the changes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,4 @@ services:
     volumes:
     - "./:/project_home"
     - "${PROJECT_ROOT_DIR}:/shared_folders/"
-    - "./.ssh/:/root/.ssh"
+    # - "./.ssh/:/root/.ssh"
